<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notfalldaten</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Vorname, Nachname</string>
    <string name="medication">Medikamente</string>
    <string name="diseases">Krankheiten</string>
    <string name="save">Speichern</string>
    <string name="surname">Vorname</string>
    <string name="nname">Name</string>
    <string name="address">Adresse</string>
    <string name="socialnumber">Sozialversicherungsnummer</string>
    <string name="freetext">Freitext, zB Notfallnummer, Wichtige Informationen im Notfall</string>
    <string name="title_activity_nfcwrite">NFC Tag erstellen</string>
    <string name="nfctag">Bitte NFC Tag auflegen</string>
    <string name="title_activity_medication">Medikamenten Liste</string>
    <string name="new_medication">Neues Medikament</string>
    <string name="done">Fertig</string>
    <string name="title_activity_disease">Krankheiten Liste</string>
    <string name="rhesus">Rhesus Faktor positiv</string>
    <string name="bloodgroup">Blutgruppe</string>
    <string name="novalidsvnr">Keine Gültige SVNR</string>
    <string name="obligatoryfield">Pflichtfeld</string>
    <string name="fillallfields">Alle Pflichtfelder müssen ausgefüllt werden!</string>

    <string-array name="bloodgroups">
        <item>Unbekannt</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>0</item>
    </string-array>
    <string-array name="rhesus">
        <item>Unbekannt</item>
        <item>Rhesus positiv</item>
        <item>Rhesus negativ</item>
    </string-array>
    <string-array name="kell">
        <item>Unbekannt</item>
        <item>Kell positiv</item>
        <item>Kell negativ</item>
    </string-array>
    
    <string-array name="readerOptions">
        <item>Sanitäter</item>
        <item>Notarzt</item>
        <item>Identifizierung</item>
    </string-array>

    <string name="HelpString">Geben Sie ihre Notfalldaten in die Felder ein und drücken Sie dann auf Speichern.</string>
    <string name="save_local">Lokal speichern</string>
    <string name="diseasehelp">Krankheit eingeben</string>
    <string name="male">männlich</string>
    <string name="female">weiblich</string>
    <string name="organdonor">Organspender</string>
    <string name="title_activity_emergency_reader">Notfallkarte Lesen</string>
    <string name="patiendata">Patientendaten</string>
    <string name="dontmove">Tag nicht entfernen!</string>
    <string name="pleasewait">Bitte Warten</string>
    <string name="saved">Das Tag wurde gespeichert!</string>

</resources>